src/objects/CustomObject11__c.object
<CustomObject>
    <fields>
        <fullName>Field3__c</fullName>
        <label>盘点日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工程师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>gjpdjl7M4y</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field5__c</fullName>
        <label>区域</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>飞白</fullName>
                </value>
                <value>
                    <fullName>本部</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>工具盘点记录</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field4__c</columns>
        <columns>Field5__c</columns>
        <columns>Field3__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>工具盘点记录编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工具盘点记录</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>